@@ -1,3 +1,10 @@
+Fri Jul 10 16:00:04 1998  Nick Clifton  <nickc@cygnus.com>
+
+	* config/tc-v850.c (md_show_usage): Changed format to match that
+	of gcc, ld, etc.
+
+	* as.c (show_usage): Changed format to match that of gcc, ld, etc.
+
 Thu Jul  9 12:09:57 1998  Andreas Schwab  <schwab@issan.informatik.uni-dortmund.de>
 
 	* config/tc-m68k.c (tc_m68k_fix_adjustable): Don't adjust vtable
